--- a/src/app/educations/educations.component.html
+++ b/src/app/educations/educations.component.html
@@ -20,11 +20,11 @@
             />
           </div>
           <div class="unit">
-            <label for="educationJobTitle">Degree</label>
+            <label for="educationDegree">Degree</label>
             <input
               type="text"
               class="form-control"
-              id="educationJobTitle"
+              id="educationDegree"
               placeholder="Degree"
               formControlName="degree"
             />
