--- a/src/app/custom-section/custom-section.component.css
+++ b/src/app/custom-section/custom-section.component.css
@@ -1,28 +1,25 @@
-.unit{
-    width:45%;
-  } 
-  
-  .personal-row{
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  input{
-    background-color: rgb(239, 242, 249);
-    height: calc(2.25em + 0.75rem + 2px);
-  }
-  
-  #experienceDescription{
-    background-color: rgb(239, 242, 249);
-  }
-  
-  @media (max-width: 550px) {
-    .personal-row{
-     flex-direction: column;
-   }
-   .unit {
-     width:auto;
-   }
-  
-  }
-  
+.text-editor {
+  border: 1px solid #ccc;
+  padding: 5px;
+  font-size: 14px;
+}
+
+.text-editor .toolbar {
+  margin-bottom: 5px;
+}
+
+.text-editor .toolbar button {
+  margin-right: 5px;
+  padding: 2px 5px;
+  font-weight: bold;
+  border: none;
+  background: #fff;
+  cursor: pointer;
+}
+
+.text-editor .textarea {
+  min-height: 200px;
+  border: 1px solid #ccc;
+  padding: 5px;
+  font-size: 14px;
+}
