added some changes

--- a/src/app/add-sections/add-sections.component.html
+++ b/src/app/add-sections/add-sections.component.html
@@ -1,11 +1,11 @@
 <div class="add-sections-container">
-    <h4>Add Sections {{ referencesAdded }}</h4>
+    <h4>Add Sections</h4>
     <div class="list-group">
         <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddCustomSections()">Custom Section</button>
         <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddExtraCurricularActivities()">Extra Curricular Activities</button>
-        <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddHobbies()">Hobbies</button>
+        <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddHobbies()" [disabled]="hobbiesAdded">Hobbies</button>
         <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddReferences()" [disabled]="referencesAdded">References</button>
-        <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddCourses()">Courses</button>
+        <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddCourses()" >Courses</button>
         <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddInternships()">Internships</button>
         <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddLanguages()">Languages</button>
     </div>
