--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,38 +1,45 @@
 <h4>Skills</h4>
 <p>Choose 5 of the most important skills to show your talents! Make sure they
     match the keywords of the job listing if applying via an online system. Choose from the following curated for you by the AI based on the job title you picked or add your own skills.</p>
-<div class="relevant-skills row">
-    <div class="col-4" *ngFor="let skill of relevantSkills; let i = index">
-        <button type="button" class=" hoover-feature" (click)="addSuggestedSkill(i)">{{ skill }} +</button>
+<div class="relevant-skills">
+    <div class = "skill" *ngFor="let skill of relevantSkills; let i = index">
+        <button
+        type = "button" class = "hoover-feature" 
+        (click) = "addSuggestedSkill(i)">{{ skill }} +</button>
     </div>
 </div>
 <div>
     <form [formGroup]="skillsForm">
         <div formArrayName="skills">
-            <div *ngFor="let skills of skills.controls; let i= index" [formGroupName]="i">
+            <div *ngFor="let skills of skills.controls; 
+            let i= index" [formGroupName]="i">
                 <div class="input-row">
                     <div class="unit">
                         <label for="skillName">Skill</label>
-                        <input class="form-control" type="text" id="skillName" placeholder="Name of Skill"
+                        <input class="form-control" 
+                        type="text" id="skillName" placeholder="Name of Skill"
                             formControlName="skillName" />
                     </div>
                     <div class="unit">
                         <label for="proficiency">Experience Level</label>
-                        <select class="form-control" id="experienceLevel" formControlName="experienceLevel" required>
+                        <select class="form-control" id="experienceLevel" 
+                        formControlName="experienceLevel" required>
                             <option selected value='"Novice"'>Novice</option>
-                            <option value='"Begginer"'>Begginer</option>
+                            <option value='"Beginner"'>Beginner</option>
                             <option value='"Skillfull"'>Skillfull</option>
                             <option value='"Experienced"'>Experienced</option>
                             <option value='"Expert"'>Expert</option>
                         </select>
                     </div>
                 </div>
-                <button class="btn btn-outline-danger" type="button" (click)="removeSkill(i)">
+                <button class="btn btn-outline-danger" 
+                type="button" (click)="removeSkill(i)">
                     Remove Skill
                 </button>
             </div>
         </div>
-        <button type="button" class="btn btn-outline-primary" (click)="addSkill()">
+        <button type="button" class="btn btn-outline-primary"
+         (click)="addSkill()">
             Add Skill
         </button>
     </form>
