--- a/src/app/personaldetails/personaldetails.component.html
+++ b/src/app/personaldetails/personaldetails.component.html
@@ -13,7 +13,7 @@
             <div class = "unit">
             <div class="photo-upload ">
                 <label class = "photo-label" for="photo-input">Photo
-                  <img class ="img-fluid" src="../../assets/PhotoUploadButton.png"  />
+                  <!-- <img class ="img-fluid" src="../../assets/PhotoUploadButton.png"  /> -->
                 </label>
                 <input id="photo-input" type="file"
                 accept="image/x-png,image/jpeg" 
