--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -10,13 +10,13 @@
                     <div class = "unit ">
                         <label for="experienceEmployer">Employer</label>
                         <input type="text" class = "form-control" 
-                        id="experienceEmployer" placeholder="Experience Employer" 
+                        id="experienceEmployer" placeholder="e.g Yenetta Code" 
                         formControlName="employer"/>
                     </div>
                     <div class = "unit">
                         <label for="experienceJobTitle">Job Title</label>
                         <input type="text" class = "form-control" 
-                        id="experienceJobTitle" placeholder="Experience Job Title" 
+                        id="experienceJobTitle" placeholder="e.g. Software Engineer"
                         formControlName="jobTitle">
                     </div>
             </div>
@@ -42,15 +42,15 @@
                 <div class="unit">
                     <label for="experienceCity">City</label>
                     <input type="text"  class = "form-control"  
-                    id="experienceCity" placeholder="Experience City" formControlName="city">
+                    id="experienceCity" placeholder="Addis Ababa" formControlName="city">
                 </div>
 
             </div>
             
-                <div>
+                <div class = "description-box" >
                     <label for="experienceDescription">Description</label>
                     <textarea  type="text" class = "form-control"
-                      id="experienceDescription" placeholder="Experience Description"
+                      id="experienceDescription" placeholder="Add a detailed description of the Job."
                        formControlName="description" rows="5"></textarea>
                 </div>
                 <button class = "btn btn-outline-danger" 
