--- a/src/app/personal-summary/personal-summary.component.html
+++ b/src/app/personal-summary/personal-summary.component.html
@@ -11,6 +11,7 @@
     <div class="summary-box">
         <form>
             <textarea class="personal-space form-control"
+            placeholder = "You can select an AI generated summary from below."
                 rows="5" cols="48"></textarea>
         </form>
 
