--- a/src/app/personaldetails/personaldetails.component.html
+++ b/src/app/personaldetails/personaldetails.component.html
@@ -31,13 +31,13 @@
             <div class="unit">
                 <label for="firstname">First Name</label><br>
                     <input type="text" class="form-control" 
-                    placeholder="e.g. John"
+                    placeholder="e.g. Abebe"
                     formControlName = "firstName">
             </div>
             <div class="unit">
                 <label for="lastname">Last Name</label><br>
                     <input type="text" class="form-control" 
-                    placeholder="e.g. Doe"
+                    placeholder="e.g. Kebede"
                     formControlName = "lastName">
             </div>
         </div>
@@ -46,7 +46,7 @@
             <div class = "unit">
                 <label for="email">Email</label><br>
                     <input type="email" class="form-control" 
-                    placeholder="e.g. Johndoe@gmail.com" formControlName = "email">
+                    placeholder="e.g. Abebekebede@gmail.com" formControlName = "email">
             </div>
             <div class="unit">
                 <label for="phone">Phone</label><br>
