added finer changes - handled placeholder features - the buttons in the add-sections-component are now responsive

--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -8,12 +8,12 @@
                 <div class="personal-row">
                     <div class="unit ">
                         <label for="courseTitle">Title</label>
-                        <input type="text" class="form-control" id="courseTitle" placeholder="Title"
+                        <input type="text" class="form-control" id="courseTitle" placeholder="e.g. The Essence of Computer Science – C++ for People in a Hurry"
                             formControlName="course">
                     </div>
                     <div class="unit">
                         <label for="courseInstitution">Institution</label>
-                        <input type="text" class="form-control" id="courseInstitution" placeholder="Institution"
+                        <input type="text" class="form-control" id="courseInstitution" placeholder="e.g. Awaqi"
                             formControlName="institution">
                     </div>
                 </div>
