--- a/src/app/educations/educations.component.html
+++ b/src/app/educations/educations.component.html
@@ -15,7 +15,7 @@
               type="text"
               class="form-control"
               id="educationSchool"
-              placeholder="Education School"
+              placeholder="e.g. University of Gondar"
               formControlName="school"
             />
           </div>
@@ -25,7 +25,7 @@
               type="text"
               class="form-control"
               id="educationDegree"
-              placeholder="Degree"
+              placeholder="e.g. M.Sc. in Computer Science"
               formControlName="degree"
             />
           </div>
@@ -59,7 +59,7 @@
               type="text"
               class="form-control"
               id="educationCity"
-              placeholder="Education City"
+              placeholder="e.g. Jimma"
               formControlName="city"
             />
           </div>
@@ -71,7 +71,7 @@
             type="text"
             class="form-control"
             id="educationDescription"
-            placeholder="Education Description"
+            placeholder="Write a short description here."
             formControlName="description"
             rows="5"
           ></textarea>
