--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -42,7 +42,7 @@
                 <div class="unit">
                     <label for="experienceCity">City</label>
                     <input type="text"  class = "form-control"  
-                    id="experienceCity" placeholder="Addis Ababa" formControlName="city">
+                    id="experienceCity" placeholder="e.g. Addis Ababa" formControlName="city">
                 </div>
 
             </div>
