--- a/src/app/extra-curricular-activities/extra-curricular-activities.component.html
+++ b/src/app/extra-curricular-activities/extra-curricular-activities.component.html
@@ -9,13 +9,13 @@
                     <div class = "unit ">
                         <label for="extraCurricularActivityEmployer">Employer</label>
                         <input type="text" class = "form-control" 
-                        id="extraCurricularActivityEmployer" placeholder="Extra-curricular Activity Employer" 
+                        id="extraCurricularActivityEmployer" placeholder="e.g. Dereja" 
                         formControlName="employer"/>
                     </div>
                     <div class = "unit">
                         <label for="extraCurricularActivityJobTitle">Function</label>
                         <input type="text" class = "form-control" 
-                        id="extraCurricularActivityJobTitle" placeholder="Extra-curricular Activity Job Title" 
+                        id="extraCurricularActivityJobTitle" placeholder="e.g. Marketing Bootcamp" 
                         formControlName="function">
                     </div>
             </div>
@@ -41,7 +41,7 @@
                 <div class="unit">
                     <label for="extraCurricularActivityCity">City</label>
                     <input type="text"  class = "form-control"  
-                    id="extraCurricularActivityCity" placeholder="Extra-curricular Activity City" formControlName="city">
+                    id="extraCurricularActivityCity" placeholder="e.g. Bahirdar" formControlName="city">
                 </div>
 
             </div>
