--- a/src/app/references/references.component.html
+++ b/src/app/references/references.component.html
@@ -9,12 +9,12 @@
                         <div class="unit">
                             <label for="referenceName">Name</label>
                             <input class = "form-control" type="text" id="referenceName"
-                             placeholder="Referenece Name" formControlName="name">
+                             placeholder="e.g. Natnael Abayneh" formControlName="name">
                         </div>
                         <div class="unit">
                             <label for = "referenceCompany">Company</label>
                             <input class = "form-control" type="text" id="referenceCompany"
-                             placeholder="Person Company" formControlName="company">
+                             placeholder="e.g. Pearson P.L.C." formControlName="company">
                         </div>
                 </div>
                 
@@ -22,13 +22,13 @@
                 <div class="unit">
                     <label for="referencePhone">Phone</label>
                     <input class = "form-control" type="number" id="referencePhone"
-                     placeholder="Refernece Phone" formControlName="phone">
+                     placeholder="e.g. +251999999999" formControlName="phone">
                 </div>
 
                 <div class="unit">
                     <label for="referenceEmail">Email</label>
                     <input class = "form-control" type="email" id="referenceEmail"
-                     placeholder="Referenece Email" formControlName="email">
+                     placeholder="Natnaelabayneh@gmail.com" formControlName="email">
                 </div>
             </div>
                 <button class = "btn btn-outline-danger" type="button" (click)="removeReference(i)">
