--- a/src/app/internships/internships.component.html
+++ b/src/app/internships/internships.component.html
@@ -9,13 +9,13 @@
                     <div class = "unit ">
                         <label for="internshipEmployer">Employer</label>
                         <input type="text" class = "form-control" 
-                        id="internshipEmployer" placeholder="Experience Employer" 
+                        id="internshipEmployer" placeholder="e.g. BGI Ethiopia" 
                         formControlName="employer"/>
                     </div>
                     <div class = "unit">
                         <label for="internshipJobTitle">Job Title</label>
                         <input type="text" class = "form-control" 
-                        id="internshipJobTitle" placeholder="Experience Job Title" 
+                        id="internshipJobTitle" placeholder="e.g. Intern Industrial Electrician" 
                         formControlName="jobTitle">
                     </div>
             </div>
@@ -41,7 +41,7 @@
                 <div class="unit">
                     <label for="internshipCity">City</label>
                     <input type="text"  class = "form-control"  
-                    id="internshipCity" placeholder="Experience City" formControlName="city">
+                    id="internshipCity" placeholder="e.g. Harar" formControlName="city">
                 </div>
 
             </div>
