--- a/src/app/languages/languages.component.html
+++ b/src/app/languages/languages.component.html
@@ -7,7 +7,7 @@
         <div class="input-row">
           <div class="unit">
             <label for="label">Language Name</label>
-            <input class="form-control" type="text" id="label" placeholder="Language" formControlName="languageName" />
+            <input class="form-control" type="text" id="label" placeholder="e.g. English" formControlName="languageName" />
           </div>
           <div class="unit">
             <label for="proficiency">Proficiency Level</label>
