--- a/src/app/website-links/website-links.component.html
+++ b/src/app/website-links/website-links.component.html
@@ -9,12 +9,12 @@
                         <div class="unit">
                             <label for="label">Label</label>
                             <input class = "form-control" type="text" 
-                            id="label" placeholder="label" formControlName="label">
+                            id="label" placeholder="e.g. LinkedIn" formControlName="label">
                         </div>
                         <div class="unit">
                             <label for = "link">Link</label>
                             <input class = "form-control" type="text" 
-                            id="link" placeholder="link" formControlName="link">
+                            id="link" placeholder="https://www.linkedin.com/..." formControlName="link">
                         </div>
                 </div>
                 
